[workspace]
members = [
    #
    "anytree-cli",
    "anytree-plugin-cargo",
    "anytree-plugin-cargo-dependencies",
    "anytree-sbom",
    "anytree-utils",
]

[workspace.dependencies]
anyhow = "1.0.72"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4"] }

[profile.dev]
panic = "abort"
opt-level = 0
lto = false
debug = true
debug-assertions = true
overflow-checks = true
incremental = true

[profile.release]
panic = "abort"
opt-level = "z"
lto = false
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
