[package]
name = "anytree-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "anytree"
path = "src/bin/anytree.rs"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true

anytree-plugin-bash = { path = "../anytree-plugin-bash/" }
anytree-plugin-cargo = { path = "../anytree-plugin-cargo/" }
anytree-plugin-cargo-dependencies = { path = "../anytree-plugin-cargo-dependencies/" }
anytree-sbom = { path = "../anytree-sbom/" }
anytree-utils = { path = "../anytree-utils/" }
clap = { version = "4.3", features = ["env", "derive"] }
dirs = "5.0"
