[package]
name = "anytree-plugin-cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
dirs = "5.0.1"
anytree-sbom = { path = "../anytree-sbom" }
anytree-utils = { path = "../anytree-utils" }
serde_json = "1.0.96"
tracing = "0.1.37"
uuid = { version = "1.3.4", features = ["v4"] }
