[package]
name = "anytree-plugin-cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
anytree-sbom = { path = "../anytree-sbom" }
anytree-utils = { path = "../anytree-utils" }
dirs = "5.0.1"
hex = "0.4.3"
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
