[package]
name = "anytree-plugin-cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
anytree-plugin-cargo-dependencies = { path = "../anytree-plugin-cargo-dependencies/" }
anytree-sbom = { path = "../anytree-sbom/" }
anytree-utils = { path = "../anytree-utils/" }
tracing.workspace = true
uuid.workspace = true
