[package]
name = "anytree-utils"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
anytree-sbom = { path = "../anytree-sbom" }
hex = "0.4.3"
md-5 = "0.10.5"
serde.workspace = true
serde_json.workspace = true
sha-1 = "0.10.1"
sha2 = "0.10.7"
tracing-subscriber.workspace = true
tracing.workspace = true
